# MEPHI-labs

./: .gitignore  README.md
1sem/: README.md
2sem/: README.md
3sem/: README.md
4sem/: README.md
5sem/PARVPO/: README.md
5sem/PARVPO/lab1/: На защиту Л1 Гатченко ПАРВПО.docx  Отчет Л1 Гатченко А. Б22-525 ПАРВПО.docx
5sem/PARVPO/lab2/: Лист Microsoft Excel.xlsx
5sem/PARVPO/lab3/: Диаграмма без названия.drawio
5sem/PP/: README.md
5sem/PP/kruskal/: main.cpp  Лист Microsoft Excel.xlsx  ТЗ.docx
5sem/PP/lab1/: 1.py  b.c  lab1.c  test.drn  Книга1.xlsx  На защиту Л1 Гатченко.docx  Отчет Л1 Гатченко А. Б22-525.docx
5sem/PP/lab2/: lab2.c  Книга1.xlsx  Отчет Л2 Гатченко А. Б22-525.docx
5sem/PP/lab3/: Книга1.xlsx  Отчет Л3 Гатченко А. Б22-525.docx
5sem/PP/lab4/: main.cpp  Книга1.xlsx  Отчет Л4 Гатченко А. Б22-525.docx
5sem/PP/lab5/: CMakeLists.txt  lab5.cpp  ~$Книга1.xlsx  Книга1.xlsx  Книга2.xlsx  На защиту - Л5 Гатченко.docx  Отчет Л5 Гатченко А. Б22-525.docx
5sem/PP/lab6/: CMakeLists.txt  lab6.cpp  res.txt  Книга1.xlsx  На защиту - Л6 Гатченко.docx  Отчет Л6 Гатченко А. Б22-525.docx
5sem/PP/lab7/: CMakeLists.txt  lab7.c  res.txt  Книга.xlsx  Лист Microsoft Excel.csv  Лист Microsoft Excel.xlsx  Отчет Л7 Гатченко А. Б22-525.docx
6sem/Crypt/: README.md
6sem/Databases/: README.md
6sem/Frontend/: README.md
6sem/PARVPO/: README.md  Отчет Л ПАРВПО2 Гатченко А. Б22-525.md
6sem/PARVPO/lab1/: CMakeLists.txt  equation_solver.cpp  main.cpp  main1.cpp  main2.cpp  Отчет Л1 ПАРВПО2 Гатченко А. Б22-525.docx
6sem/PARVPO/lab1/graph/: main.py
(+102 files in other folders)
